Use normal-flow footer to avoid overlapping main content
Made-with: Cursor

--- a/_sass/layout/_footer.scss
+++ b/_sass/layout/_footer.scss
@@ -7,17 +7,11 @@
   background-color: var(--global-footer-bg-color);
   color: var(--global-text-color-light);
 
-  float: left;
+  position: relative;
   margin-left: 0;
   margin-right: 0;
   width: 100%;
   clear: both;
-
-  /* sticky footer fix start */
-  position: absolute;
-  bottom: 0em;
-  height: auto;
-  /* sticky footer fix end */
 
   margin-top: 3em;
 
